remove fixed height of right side, which was displaying weird on small displays

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,7 +150,7 @@ a.side-button:hover {
   
 #right {
     grid-area: rightcontent;
-    height: 500px;
+    
     display:flex;
     flex-direction: column;
     justify-content: space-around;
